added in basic HTML code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="reset" href="../professional-web-portfolio/assets/css/reset.css">
+    <link rel="stylesheet" href="../professional-web-portfolio/assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <header>
+    <h1>Matt Schneble</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">About Me</a>
+            </li>
+            <li>
+                <a href="assignments.html">Work</a>
+            </li>
+            <li>
+                <a href="index.html">Contact</a>
+            </li>
+            <li>
+                <a href="assignments.html">Resume</a>
+            </li>
+        </ul>
+    </nav>
+    </header>
     
+    <section class="About Me"></section>
+    <main class="Bio Info">
+
+    </main>
+
+
+
+
+
+
 </body>
+
 </html>
