updated index.html, reset.css and style.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="reset" href="../professional-web-portfolio/assets/css/reset.css">
     <link rel="stylesheet" href="../professional-web-portfolio/assets/css/style.css">
-    <title>Document</title>
+    <title>Matt Schneble's Portfolio</title>
 </head>
 
 <body>
@@ -30,10 +30,43 @@
     </nav>
     </header>
     
-    <section class="About Me"></section>
-    <main class="Bio Info">
-
+    <section class="About Me">
+        <h2>About Me</h2>
+        <p>My name is Matt Schneble and I am a student studying Full Stack Development. I live in Seattle and I love to play sports and be outdoors. I am excited to learn more about development and I am excited to see where it takes me.</p>
+    </section>
+    <main>
+        <section class="Work">
+            <h2>Work</h2>
+            <p>Here is some of my work:</p>
+            <section class="project1">
+                <h3>Project 1</h3>
+                <p>Project 1 Description</p>
+            </section>
+            <section class="project2">
+                <h3>Project 2</h3>
+                <p>Project 2 Description</p>
+            </section>
+            <section class="project3">
+                <h3>Project 3</h3>
+                <p>Project 3 Description</p>
+            </section>
+            <section class="project4">
+                <h3>Project 4</h3>
+                <p>Project 4 Description</p>
+            </section>
+            <section class="project5">
+                <h3>Project 5</h3>
+                <p>Project 5 Description</p>
+            </section>
+        </section>
     </main>
+    <footer>
+        <h2>Contact Me</h2>
+        <p>Phone: 555-555-5555</p>
+        <p>Email: myemailaddress@domain.com</p>
+        <p>GitHub: <a href="https://github.com/mattschneble">GitHub</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/matthew-schneble">LinkedIn</p>
+    </footer>
 
 
 
