HTML and CSS updates for clarity/functionality

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <p>My name is Matt Schneble and I am a student studying Full Stack Development. I live in Seattle and I love to play sports and be outdoors. I am excited to learn more about development and I am excited to see where it takes me.</p>
     </section>
     <main>
-        <section class="Work">
+        <section>
+            <section class="Work">
             <h2>Work</h2>
             <p>Here is some of my work:
                 NASHVILLE, Tenn. -- Edmonton Oilers center Connor McDavid swept the top individual honors at the NHL Awards on Monday to cap his career-best season.
@@ -67,6 +68,7 @@ The Bruins, who set new NHL regular-season records for wins (65) and points (135
 
 Boston's Jim Montgomery won the Jack Adams Award for coach of the year, finishing ahead of Lindy Ruff of the New Jersey Devils and Dave Hakstol of the Seattle Kraken.               
             </p>
+            </section>
             <section class="project1">
                 <h3>Project 1</h3>
                 <p>NASHVILLE, Tenn. -- Edmonton Oilers center Connor McDavid swept the top individual honors at the NHL Awards on Monday to cap his career-best season.
@@ -217,16 +219,16 @@ Boston's Jim Montgomery won the Jack Adams Award for coach of the year, finishin
             </section>
             </section> 
         </section>
-    </main>
 
-    <aside>
-        <section class="Resume">
+        <section class="resume">
             <h2>Resume</h2>
             <p>Here is my resume:</p>
         </section>
 
+    </main>
+    
     <footer>
-        <section class="Contact Me">
+        <section class="contact me">
         <h2>Contact Me</h2>
         <nav>
             <ul>
