updated HTML and CSS. Updated links to jump to appropriate sections.

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
             </li>
             <li>
                 <!--link to other section isn't working. Fix here and try to resolve. Look at old comments from prior assignment-->
-                <a href="#ContactMe">Contact Me</a>
+                <a href="#contactme">Contact Me</a>
             </li>
             <li>
-                <a href="#Resume">Resume</a>
+                <a href="#resume">Resume</a>
             </li>
         </ul>
     </nav>
     </header>
     
-    <section class="AboutMe">
+    <section id="AboutMe" class="AboutMe">
         <h2>About Me</h2>
         <!--<img src="./assets/images/brand-awareness.png" class="float-left" alt="Matt Schneble">-->
         <p>My name is Matt Schneble and I am a student studying Full Stack Development. I live in Seattle and I love to play sports and be outdoors. I am excited to learn more about development and I am excited to see where it takes me.</p>
     </section>
     <main>
         <section>
-            <section class="Work">
+            <section id ="Work" class="Work">
             <h2>Work</h2>
             <p>Here is some of my work:
                 NASHVILLE, Tenn. -- Edmonton Oilers center Connor McDavid swept the top individual honors at the NHL Awards on Monday to cap his career-best season.
@@ -220,7 +220,7 @@ Boston's Jim Montgomery won the Jack Adams Award for coach of the year, finishin
             </section> 
         </section>
 
-        <section class="resume">
+        <section id ="resume" class="resume">
             <h2>Resume</h2>
             <p>Here is my resume:</p>
         </section>
@@ -228,7 +228,7 @@ Boston's Jim Montgomery won the Jack Adams Award for coach of the year, finishin
     </main>
     
     <footer>
-        <section class="contact me">
+        <section id ="contactme" class="contactme">
         <h2>Contact Me</h2>
         <nav>
             <ul>
@@ -236,13 +236,13 @@ Boston's Jim Montgomery won the Jack Adams Award for coach of the year, finishin
                     <a>Phone: (281)-330-8004</a>
                 </li>
                 <li>
-                    <a>Email: myemailaddress@domain.com </a>
+                    <a href="mailto:myemailaddress@domain.com">Email: myemailaddress@domain.com</a>
                 </li>
                 <li>    
-                    <a>GitHub <a href="https://github.com/mattschneble"></a>
+                    <a href="https://github.com/mattschneble">GitHub</a>
                 </li>
                 <li>
-                    <a>LinkedIn <a href="https://www.linkedin.com/in/matthew-schneble"></a>
+                   <a href="https://www.linkedin.com/in/matthew-schneble">LinkedIn</a>
                 </li>
             </ul>
         </nav>
