updated biography information and associated CSS.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="AboutMe" class="AboutMe">
                 <h2>About Me</h2>
                 <!--<img src="./assets/images/brand-awareness.png" class="float-left" alt="Matt Schneble">-->
-                <p>My name is Matt Schneble and I am a student studying Full Stack Development. I live in Seattle and I love to play sports and be outdoors. I am excited to learn more about development and I am excited to see where it takes me.</p>
+                <p>My name is Matt Schneble and I am a student studying Full Stack Development. I live in Seattle and I love to play sports and be outdoors. I am excited to learn more about development and I am excited to see where it takes me. Before studying development, I worked as an IT Project Manager. I have a degree in Business Administration with a specialization in Management Information Systems from San Diego State University.</p>
         </section>
         <section id ="Work" class="Work">
             <h2>Work</h2>
