updated portfolio with latest project and screenshot

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <section class="project1">
             <h3>Horiseon Refactor</h3>
-            <a href="https://mattschneble.github.io/horiseon-accessibility-refactor/"><img src="./assets/images/horiseon screenshot.png" alt="Horiseon Refactor"></a>
+            <a href="https://rossfahan.github.io/flavorByte/"><img src="./assets/images/Flavor Byte.png" alt="Flavor Byte"></a>
         </section>
         <div class="projectgroup1">
         <section class="project2">
@@ -50,8 +50,8 @@
             <a href="https://mattschneble.github.io/prework-study-guide/"><img src="./assets/images/prework study guide screenshot.png" alt="Prework Study Guide"></a>
         </section>
         <section class="project3">
-            <h3>Code Snippet Cheatsheet</h3>
-            <a href="https://mattschneble.github.io/mini-project-6.26/"><img src="./assets/images/css lesson.png" alt="CSS Examples"></a>
+            <h3>Horiseon Refactor</h3>
+            <a href="https://mattschneble.github.io/mini-project-6.26/"><img src="./assets/images/horiseon screenshot.png" alt="Horiseon Refactor Project"></a>
         </section>
         </div> 
         <div class="projectgroup2">
@@ -60,8 +60,8 @@
             <a href="https://mattschneble.github.io/student-mini-project-622/"><img src="./assets/images/basic contact form with CSS.png" alt="Basic CSS Styling"></a>
         </section>
         <section class="project5">
-            <h3>Headings Example</h3>
-            <a href="https://mattschneble.github.io/first-day-repo/"><img src="./assets/images/first day headings lesson.png" alt="Headings Example."></a>
+            <h3>Code Snipped Cheatsheet</h3>
+            <a href="https://mattschneble.github.io/mini-project-6.26/"><img src="./assets/images/css lesson.png" alt="CSS Examples"></a>
         </section>
         </div>
 
