--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>Below you will find some of the work that I have completed. You can click on each image to be transported to the deployed link!</p>
         </section>
         <section class="project1">
-            <h3>Horiseon Refactor</h3>
+            <h3>Flavor Byte</h3>
             <a href="https://rossfahan.github.io/flavorByte/"><img src="./assets/images/Flavor Byte.png" alt="Flavor Byte"></a>
         </section>
         <div class="projectgroup1">
