--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
         <section class="project3">
             <h3>Horiseon Refactor</h3>
-            <a href="https://mattschneble.github.io/mini-project-6.26/"><img src="./assets/images/horiseon screenshot.png" alt="Horiseon Refactor Project"></a>
+            <a href="https://mattschneble.github.io/horiseon-accessibility-refactor/"><img src="./assets/images/horiseon screenshot.png" alt="Horiseon Refactor Project"></a>
         </section>
         </div> 
         <div class="projectgroup2">
