--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <p>Below you will find some of the work that I have completed. You can click on each image to be transported to the deployed link!</p>
         </section>
         <section class="project1">
-            <h3>Flavor Byte</h3>
-            <a href="https://rossfahan.github.io/flavorByte/"><img src="./assets/images/Flavor Byte.png" alt="Flavor Byte"></a>
+            <h3>ReelReviews</h3>
+            <a href="https://discordapp.com/channels/1139270984688484493/1139270985476997175/1141421921829924935/"><img src="./assets/images/Flavor Byte.png" alt="Flavor Byte"></a>
         </section>
         <div class="projectgroup1">
         <section class="project2">
@@ -60,8 +60,8 @@
             <a href="https://mattschneble.github.io/student-mini-project-622/"><img src="./assets/images/basic contact form with CSS.png" alt="Basic CSS Styling"></a>
         </section>
         <section class="project5">
-            <h3>Code Snipped Cheatsheet</h3>
-            <a href="https://mattschneble.github.io/mini-project-6.26/"><img src="./assets/images/css lesson.png" alt="CSS Examples"></a>
+            <h3>Flavor Byte</h3>
+            <a href="https://rossfahan.github.io/flavorByte/"><img src="./assets/images/Flavor Byte.png" alt="Flavor Byte"></a>
         </section>
         </div>
 
