added new project links/images etc.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <section class="project1">
             <h3>ReelReviews</h3>
-            <a href="https://discordapp.com/channels/1139270984688484493/1139270985476997175/1141421921829924935/"><img src="./assets/images/Flavor Byte.png" alt="Flavor Byte"></a>
+            <a href="https://cinemaserver-7dafae9cd971.herokuapp.com/"><img src="./assets/images/Snag_1d82fe.png" alt="ReelReviews"></a>
         </section>
         <div class="projectgroup1">
         <section class="project2">
